# TermColor

./: CMakeLists.txt
src/: CMakeLists.txt
src/backend/dominantcolor/: DominantColor.cpp
src/backend/writer/: Writer.cpp
src/gui/controller/terminalscontroller/: TerminalsController.cpp
src/gui/model/colorsmodel/: ColorsModel.cpp
src/gui/widget/droparea/: DropArea.cpp
src/gui/widget/exportwidget/: ExportWidget.cpp
tests/backend/dominantcolor/: CMakeLists.txt
